ajout du scrolbar

--- a/src/components/menu2/menu.module.css
+++ b/src/components/menu2/menu.module.css
@@ -173,7 +173,10 @@
 .smMenu {
   display: none;
   margin-bottom: 9px;
+  overflow: auto;
+  height: 80vh;
 }
+
 .filter {
   display: block;
   height: 40px;
